- New port: emulators/mupen64plus-base
Mupen64Plus is a plugin-based N64 emulator for Linux, FreeBSD which is capable
of accurately playing many games. Included are four MIPS R4300 CPU emulators,
with dynamic recompilers for 32-bit x86 and 64-bit amd64 systems, and necessary
plugins for audio, graphical rendering (RDP), signal co-processor (RSP), and
input. There are 3 OpenGL video plugins included: glN64, RiceVideoLinux, and
Glide64.

WWW:    http://code.google.com/p/mupen64plus/

--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -107,6 +107,7 @@
     SUBDIR += mupen64-softgfx
     SUBDIR += mupen64-sound
     SUBDIR += mupen64-tr64
+    SUBDIR += mupen64plus-base
     SUBDIR += nonpareil
     SUBDIR += o2em
     SUBDIR += ods2reader
