- New port: emulators/mupen64plus-rice
A graphic plugin for Mupen64Plus emulator

--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -112,6 +112,7 @@
     SUBDIR += mupen64plus-glide
     SUBDIR += mupen64plus-gln64
     SUBDIR += mupen64plus-input
+    SUBDIR += mupen64plus-rice
     SUBDIR += nonpareil
     SUBDIR += o2em
     SUBDIR += ods2reader
