- New port: emulators/mupen64plus-rsp
A RSP plugin for Mupen64plus emulator

--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -113,6 +113,7 @@
     SUBDIR += mupen64plus-gln64
     SUBDIR += mupen64plus-input
     SUBDIR += mupen64plus-rice
+    SUBDIR += mupen64plus-rsp
     SUBDIR += nonpareil
     SUBDIR += o2em
     SUBDIR += ods2reader
