- New port: emulators/mupen64plus-sdlinput
An input plugin for Mupen64Plus emulator

--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -115,6 +115,7 @@
     SUBDIR += mupen64plus-rice
     SUBDIR += mupen64plus-rsp
     SUBDIR += mupen64plus-sdlaudio
+    SUBDIR += mupen64plus-sdlinput
     SUBDIR += nonpareil
     SUBDIR += o2em
     SUBDIR += ods2reader
