New port: emulators/mupen64plus
This is the metaport to install the mupen64plus emulator and all graphics,
input and audio plugins.

WWW: http://code.google.com/p/mupen64plus/

--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -107,6 +107,7 @@
     SUBDIR += mupen64-softgfx
     SUBDIR += mupen64-sound
     SUBDIR += mupen64-tr64
+    SUBDIR += mupen64plus
     SUBDIR += mupen64plus-base
     SUBDIR += mupen64plus-dummyaudio
     SUBDIR += mupen64plus-glide
