Mark as broken with new silc-toolkit update, which I forgot on the last commit.
Submitted by:	pav, itetcu
Approved by:	garga (mentor, implicit)

--- a/net/silky/Makefile
+++ b/net/silky/Makefile
@@ -16,6 +16,7 @@ MASTER_SITE_SUBDIR=	silky
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	A simple and easy to use graphical, os-independent SILC client
 
+BROKEN=		this port is broken with newer silc-toolkit version
 DEPRECATED=	This port is broken with newer silc-toolkit version.
 EXPIRATION_DATE=	2008-07-20
 
