Fix the build when Bonjour support is not enabled.
Submitted by:	Richard Gay <richard.gay@rwth-aachen.de>

--- a/net-im/libpurple/Makefile
+++ b/net-im/libpurple/Makefile
@@ -142,6 +142,7 @@ LIB_DEPENDS+=	avahi-core.5:${PORTSDIR}/net/avahi-app
 PLIST_SUB+=	BONJOUR=""
 PRPL_MODULES:=	${PRPL_MODULES},bonjour
 .else
+CONFIGURE_ARGS+=--disable-avahi
 PLIST_SUB+=	BONJOUR="@comment not installed: "
 .endif
 
