- New port: mail/postfix-postfwd A postfix firewall policy daemon
The program uses the postfix policy delegation protocol to control access to
the mail system before a message has been accepted (please visit
http://www.postfix.org/SMTPD_POLICY_README.html for more information). It
allows you to choose an action (e.g. reject, dunno) for a combination of
several smtp parameters (like sender and recipient address, size or the
client's TLS fingerprint).

PR:		ports/123544
Submitted by:	Sahil Tandon <sahil at tandon.net>

--- a/mail/Makefile
+++ b/mail/Makefile
@@ -466,6 +466,7 @@
     SUBDIR += postfix-policyd-sf
     SUBDIR += postfix-policyd-spf
     SUBDIR += postfix-policyd-weight
+    SUBDIR += postfix-postfwd
     SUBDIR += postfix1
     SUBDIR += postfix21
     SUBDIR += postfix22
