Add a debugging knob (WITH_RDESKTOP_DEBUG) to help folks figure out any problems they may have.   [parts derived from the PR]
PR:		123720
Submitted-by:	Alexander Logvinov <ports@logvinov.com>

--- a/net/rdesktop/Makefile
+++ b/net/rdesktop/Makefile
@@ -22,8 +22,21 @@ GNU_CONFIGURE=	yes
 DOCS=		doc/AUTHORS doc/TODO doc/*.txt
 MAN1=		rdesktop.1
 
-.if !defined(WITHOUT_IPV6)
+.if !defined(WITHOUT_RDESKTOP_IPV6) && !defined(WITHOUT_IPV6)
 CONFIGURE_ARGS+=	--with-ipv6
+.endif
+
+.if defined(WITH_RDESKTOP_DEBUG)
+CONFIGURE_ARGS+=	--with-debug\
+			--with-debug-kbd\
+			--with-debug-rdp5\
+			--with-debug-clipboard\
+			--with-debug-sound\
+			--with-debug-channel\
+			--with-debug-seamless
+
+post-configure:
+	${ECHO} "#define WITH_DEBUG_SERIAL 1" >> ${WRKSRC}/rdesktop.h
 .endif
 
 do-install:
