- Mark as FORBIDDEN, arbitrary code execution
Approved by:	mentor (implicit)

--- a/net-p2p/peercast/Makefile
+++ b/net-p2p/peercast/Makefile
@@ -15,6 +15,8 @@ EXTRACT_SUFX=	.tgz
 MAINTAINER=	jadawin@FreeBSD.org
 COMMENT=	A peer-to-peer network for broadcasting and listening to streams
 
+FORBIDDEN=	arbitrary code execution, http://www.securityfocus.com/bid/28986
+
 USE_LINUX=	yes
 NO_WRKSUBDIR=	yes
 NO_BUILD=	yes
