--- a/misc/sword15/Makefile
+++ b/misc/sword15/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	sword
-PORTVERSION=	1.5.10
+PORTVERSION=	1.5.11
 CATEGORIES=	misc
 MASTER_SITES=	ftp://ftp.crosswire.org/pub/sword/source/v1.5/ \
 		http://crosswire.org/ftpmirror/pub/sword/source/v1.5/ \
@@ -19,20 +19,18 @@ COMMENT=	A project framework for manipulating Bible texts
 USE_GNOME=	pkgconfig
 USE_GMAKE=	yes
 GNU_CONFIGURE=	yes
-USE_AUTOTOOLS=	automake:110
+USE_AUTOTOOLS=	automake:110 autoconf:261
 CONFIGURE_TARGET=	--build=${MACHINE_ARCH}-portbld-freebsd${OSREL}
-CONFIGURE_ARGS+=	--without-conf --without-clucene --with-zlib
+CONFIGURE_ARGS+=	--without-conf --without-clucene --with-zlib --without-icu
 USE_LDCONFIG=	yes
 SUB_FILES=	pkg-message
 PKGMESSAGE=	${WRKDIR}/pkg-message
 
 .if defined(WITHOUT_CURL)
 CONFIGURE_ARGS+=	--without-curl
-PLIST_SUB+=	INSTALLMGR="@comment "
 .else
 LIB_DEPENDS=	curl:${PORTSDIR}/ftp/curl
 CONFIGURE_ARGS+=	--with-curl
-PLIST_SUB+=	INSTALLMGR=""
 
 pre-everything::
 	@${ECHO_CMD} "Define WITHOUT_CURL to disable remote fetch (curl) support in the installmanager"
@@ -41,6 +39,9 @@ pre-everything::
 post-patch:
 	@${REINPLACE_CMD} -e 's|$$(libdir)/pkgconfig|${PREFIX}/libdata/pkgconfig|g' \
 		${WRKSRC}/Makefile.am
+	@@${REINPLACE_CMD} -e 's|:=|=|' ${WRKSRC}/Makefile.am \
+	${WRKSRC}/Makefile.in ${WRKSRC}/lib/Makefile.am \
+	${WRKSRC}/lib/Makefile.in
 
 post-install:
 	@${MKDIR} ${PREFIX}/share/sword/mods.d
