--- a/misc/bibletime-kde3/Makefile
+++ b/misc/bibletime-kde3/Makefile
@@ -7,13 +7,14 @@
 
 PORTNAME=	bibletime
 PORTVERSION=	1.6.5.1
+PORTREVISION=	1
 CATEGORIES=	misc
 MASTER_SITES=	SF
 
 MAINTAINER=	tabthorpe@FreeBSD.org
 COMMENT=	A powerful Bible study application for KDE3
 
-RUN_DEPENDS=	${LOCALBASE}/lib/libsword-1.5.10.so:${PORTSDIR}/misc/sword \
+RUN_DEPENDS=	${LOCALBASE}/lib/libsword-1.5.11.so:${PORTSDIR}/misc/sword \
 		${LOCALBASE}/lib/libclucene.so:${PORTSDIR}/textproc/clucene
 BUILD_DEPENDS=	${RUN_DEPENDS}
 
