--- a/net-im/pidgin/Makefile
+++ b/net-im/pidgin/Makefile
@@ -7,7 +7,7 @@
 #
 
 PORTNAME=	pidgin
-PORTREVISION=	1
+PORTREVISION=	2
 
 MAINTAINER=	marcus@FreeBSD.org
 COMMENT=	Pidgin multi-protocol messaging client (GTK+ UI)
@@ -27,7 +27,7 @@ WITH_GTKUI=	yes
 
 USE_LDCONFIG=	yes
 USE_GNOME=	gnomeprefix gnomehack intlhack gtk20
-USE_XORG=	xscrnsaver
+USE_XORG=	xscrnsaver sm
 WANT_GNOME=	yes
 CONFIGURE_ARGS=	--disable-consoleui \
 		--disable-nm
