- Update to 1.1 - Modify files/virtualenv.* to accept the new optional parameter of the program - Remove hardcoded version of py-setuptools in pkg-plist

--- a/devel/py-virtualenv/Makefile
+++ b/devel/py-virtualenv/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	virtualenv
-PORTVERSION=	1.0
+PORTVERSION=	1.1
 #PORTREVISION=	0
 CATEGORIES=	devel python
 MASTER_SITES=	http://pypi.python.org/packages/source/v/virtualenv/ \
@@ -21,6 +21,8 @@ RUN_DEPENDS=	bash:${PORTSDIR}/shells/bash
 PYEASYINSTALL_INSTALLARGS=	-q -N -S ${PYTHON_SITELIBDIR} -x ${PYDISTUTILS_PKGNAME}==${PYDISTUTILS_PKGVERSION}
 PYEASYINSTALL_UNINSTALLARGS+=	-q -m -S ${PYTHON_SITELIBDIR} -x ${PYDISTUTILS_PKGNAME}==${PYDISTUTILS_PKGVERSION}
 
+PLIST_SUB=	PYEASYINSTALL_VER=${PYEASYINSTALL_VER} PYTHON_VER=${PYTHON_VER}
+
 SUB_FILES=	${PORTNAME} ${PORTNAME}.bash
 SUB_LIST=	PYTHON_CMD=${PYTHON_CMD} PYTHON_SITELIBDIR=${PYTHON_SITELIBDIR} PYEASYINSTALL_EGG=${PYEASYINSTALL_EGG}
 
@@ -34,4 +36,8 @@ post-install:
 	@${INSTALL_DATA} ${WRKDIR}/${PORTNAME}.bash ${PYTHONPREFIX_SITELIBDIR}/${PYEASYINSTALL_EGG}/support-files/
 	@${INSTALL_SCRIPT} ${WRKDIR}/${PORTNAME} ${PREFIX}/bin/${PORTNAME}
 
-.include <bsd.port.mk>
+.include <bsd.port.pre.mk>
+
+PYEASYINSTALL_VER!=	${MAKE} -f ${PORTSDIR}/devel/py-setuptools/Makefile -V PORTVERSION
+
+.include <bsd.port.post.mk>
