--- a/devel/py-virtualenv/files/virtualenv.in
+++ b/devel/py-virtualenv/files/virtualenv.in
@@ -4,5 +4,6 @@
 if [ "$1" = "" ]; then
     echo "usage: $0 ENVIRONMENT_NAME"
 else
-    exec env NEWPYTHONENV="$1" %%PREFIX%%/bin/bash --init-file %%PYTHON_SITELIBDIR%%/%%PYEASYINSTALL_EGG%%/support-files/virtualenv.bash
+    POSPARMS="$@"
+    exec env VIRTUALENVARGS="${POSPARMS}" %%PREFIX%%/bin/bash --init-file %%PYTHON_SITELIBDIR%%/%%PYEASYINSTALL_EGG%%/support-files/virtualenv.bash
 fi
