--- a/devel/synfig/Makefile
+++ b/devel/synfig/Makefile
@@ -15,24 +15,23 @@ COMMENT=	A vector based 2D animation package
 
 BUILD_DEPENDS=	${LOCALBASE}/libdata/pkgconfig/ETL.pc:${PORTSDIR}/devel/etl
 LIB_DEPENDS=	glibmm-2.4.1:${PORTSDIR}/devel/glibmm \
-		MagickWand.1:${PORTSDIR}/graphics/ImageMagick \
-		jpeg.9:${PORTSDIR}/graphics/jpeg \
-		mng.1:${PORTSDIR}/graphics/libmng \
-		png.5:${PORTSDIR}/graphics/png \
-		tiff.4:${PORTSDIR}/graphics/tiff \
-		avcodec.1:${PORTSDIR}/multimedia/ffmpeg \
-		dv.4:${PORTSDIR}/multimedia/libdv \
+		MagickWand:${PORTSDIR}/graphics/ImageMagick \
+		jpeg:${PORTSDIR}/graphics/jpeg \
+		mng:${PORTSDIR}/graphics/libmng \
+		png:${PORTSDIR}/graphics/png \
+		tiff:${PORTSDIR}/graphics/tiff \
+		avcodec:${PORTSDIR}/multimedia/ffmpeg \
+		dv:${PORTSDIR}/multimedia/libdv \
+		IlmImf:${PORTSDIR}/graphics/OpenEXR \
 		xml\\+\\+-2.6:${PORTSDIR}/textproc/libxml++26
-
-BROKEN=		bad plist
 
 USE_GNOME=	gnomehack gnometarget glib20
 USE_GETTEXT=	yes
 GNU_CONFIGURE=	yes
-USE_GMAKE=	yes
 USE_LDCONFIG=	yes
 CONFIGURE_ENV=	CPPFLAGS="-I${LOCALBASE}/include" \
 		LDFLAGS="-L${LOCALBASE}/lib"
+ALL_TARGET=	-j`${SYSCTL} -n hw.ncpu`
 
 post-patch:
 	@${REINPLACE_CMD} -e '/optimization_flags/s|CXXFLAGS=|#CXXFLAGS=| ; \
