SubLib is a library that eases the development of subtitling applications. It supports the most common text-based subtitle formats and allows for subtitle editing, conversion and synchronization.
SubLib is written in C# and can be used in platforms like Mono or .NET
Framework.

WWW: http://sublib.sourceforge.net/

PR:		ports/123825
Submitted by:	Marcin Simonides <marcin at studio4plus.com>

--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -212,6 +212,7 @@
     SUBDIR += streamanalyze
     SUBDIR += streamdvd
     SUBDIR += subconv
+    SUBDIR += sublib
     SUBDIR += subtitlecomposer
     SUBDIR += subtitleeditor
     SUBDIR += subtitleoffsetmodifier
