--- a/multimedia/gnome-subtitles/files/patch-src_GnomeSubtitles_Execution_gnome-subtitles.in
+++ b/multimedia/gnome-subtitles/files/patch-src_GnomeSubtitles_Execution_gnome-subtitles.in
@@ -1,8 +1,15 @@
---- src/GnomeSubtitles/Execution/gnome-subtitles.in.orig	Sat Mar 24 10:30:55 2007
-+++ src/GnomeSubtitles/Execution/gnome-subtitles.in	Sat Mar 24 10:31:09 2007
-@@ -1,3 +1,3 @@
+--- src/GnomeSubtitles/Execution/gnome-subtitles.in.orig	2008-05-11 18:14:09.000000000 +0200
++++ src/GnomeSubtitles/Execution/gnome-subtitles.in	2008-05-19 22:58:24.691677625 +0200
+@@ -1,4 +1,4 @@
 -#!/bin/bash
--exec -a gnome-subtitles @MONO@ @prefix@/lib/gnome-subtitles/gnome-subtitles.exe "$@"
 +#!/bin/sh
-+exec @MONO@ @prefix@/lib/gnome-subtitles/gnome-subtitles.exe "$@"
+ 
+ prefix=@prefix@
+ exec_prefix=@exec_prefix@
+@@ -8,5 +8,5 @@
+ 
+ export LD_LIBRARY_PATH="$libdir/gnome-subtitles:$LD_LIBRARY_PATH"
+ export MONO_PATH=$sublibdir:$MONO_PATH
+-exec -a gnome-subtitles @MONO@ $libdir/gnome-subtitles/gnome-subtitles.exe "$@"
++exec @MONO@ $libdir/gnome-subtitles/gnome-subtitles.exe "$@"
  
