Thunder&Lightning is a futuristic action flight simulator and realtime strategy game that takes place in a large 3D environment. Jump into the pilot seat of your Lightning aircraft and fight against Thunder tanks in a fierce battle for control of the island!
Apart from flight simulators, Thunder&Lightning takes inspiration
from (but is not a clone or remake of) the 80's classic Carrier
Command. This means that you will find yourself in control of a
futuristic carrier with aircraft and amphibious tanks at your
disposal. In the long run, there will be multiple Islands to conquer,
each with its own defense strategy.

Although Thunder&Lightning already supports missions, it aims to
be an open-ended game with a dynamically developing world with
scripted events on some occasions.

WWW: http://tnlgame.net/

PR:		ports/121132
Submitted by:	Dmitry Marakasov <amdmi3 at amdmi3.ru>

--- a/games/Makefile
+++ b/games/Makefile
@@ -778,6 +778,7 @@
     SUBDIR += tkmoo
     SUBDIR += tksol
     SUBDIR += tmw
+    SUBDIR += tnl
     SUBDIR += tomatoes
     SUBDIR += tome
     SUBDIR += toppler
