--- a/mail/mutt-devel/files/patch-Makefile.am
+++ b/mail/mutt-devel/files/patch-Makefile.am
@@ -1,19 +1,13 @@
---- Makefile.am.orig	Wed Feb 28 14:24:22 2007
-+++ Makefile.am	Wed Feb 28 14:26:20 2007
-@@ -146,16 +146,12 @@
- install-data-local: Muttrc
+--- Makefile.am.orig	2008-05-19 19:00:44.000000000 +0200
++++ Makefile.am	2008-05-19 19:03:20.000000000 +0200
+@@ -136,10 +136,6 @@
+ 
+ install-data-local:
  	$(srcdir)/mkinstalldirs $(DESTDIR)$(sysconfdir)
- 	$(INSTALL) -m 644 Muttrc $(DESTDIR)$(sysconfdir)/Muttrc.dist
 -	$(INSTALL) -m 644 $(srcdir)/mime.types $(DESTDIR)$(sysconfdir)/mime.types.dist
- 	-if [ -f $(DESTDIR)$(pkgdatadir)/Muttrc ] ; then \
- 		mv $(DESTDIR)$(pkgdatadir)/Muttrc* $(DESTDIR)$(sysconfdir) ; \
- 	elif [ -f $(DESTDIR)$(pkgdatadir)/../Muttrc ] ; then \
- 	 	mv $(DESTDIR)$(pkgdatadir)/../Muttrc* $(DESTDIR)$(sysconfdir) ; \
- 	elif [ ! -f $(DESTDIR)$(sysconfdir)/Muttrc ] ; then \
- 		$(INSTALL) -m 644 Muttrc $(DESTDIR)$(sysconfdir) ; \
--	fi
 -	-if [ ! -f $(DESTDIR)$(sysconfdir)/mime.types ]; then \
 -		$(INSTALL) -m 644 $(srcdir)/mime.types $(DESTDIR)$(sysconfdir); \
- 	fi
+-	fi
  
  uninstall-local:
+ 	for i in mime.types ; do \
