--- a/hebrew/he2/Makefile
+++ b/hebrew/he2/Makefile
@@ -18,14 +18,9 @@ RUN_DEPENDS=	${LOCALBASE}/lib/X11/fonts/hebrew:${PORTSDIR}/hebrew/elmar-fonts
 
 USE_GMAKE=	yes
 GNU_CONFIGURE=	yes
-
-.include <bsd.port.pre.mk>
-
-.if ${OSVERSION} >= 700042
-BROKEN=		Broken with gcc 4.2
-.endif
+ALL_TARGET=	-j`${SYSCTL} -n hw.ncpu`
 
 post-install:
 	@${CAT} ${PKGMESSAGE}
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
