The PHP_Archive package allows creation of self-contained cross-platform PHP libraries or applications, similar to Java jar files.
WWW: http://pear.php.net/package/PHP_Archive/

PR:		ports/123832
Submitted by:	Wen Heping <wenheping at gmail.com>

--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -101,6 +101,7 @@
     SUBDIR += parchive
     SUBDIR += pbzip2
     SUBDIR += pear-File_Archive
+    SUBDIR += pear-PHP_Archiv
     SUBDIR += pecl-bz2
     SUBDIR += pecl-lzf
     SUBDIR += pecl-phar
