- Fix build with latest math/cln
PR:		123772
Submitted by:	Mark Daniel Reidel <ports@mark.reidel.info> (maintainer)

--- a/math/qalculate/Makefile
+++ b/math/qalculate/Makefile
@@ -25,4 +25,7 @@ USE_GMAKE=	yes
 GNU_CONFIGURE=	yes
 INSTALLS_OMF=	yes
 
+post-patch:
+	@${REINPLACE_CMD} -e 's/^GMSGFMT = @GMSGFMT@/GMSGFMT = msgfmt/' ${WRKSRC}/po/Makefile.in.in
+
 .include <bsd.port.mk>
