--- a/devel/epydoc/Makefile
+++ b/devel/epydoc/Makefile
@@ -7,42 +7,37 @@
 #
 
 PORTNAME=	epydoc
-PORTVERSION=	3.0
+PORTVERSION=	3.0.1
 CATEGORIES=	devel
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
-MASTER_SITE_SUBDIR=	${PORTNAME}
+MASTER_SITES=	SF
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Python API documentation generation tool
+
+OPTIONS=	UTF8 "Use UTF-8 instead of iso-8859-1 in HTMLs" off
 
 USE_PYTHON=	yes
 USE_PYDISTUTILS=	yes
 
 MAN1=		epydoc.1 epydocgui.1
 
-OPTIONS=	UTF8 "Use UTF-8 instead of iso-8859-1 in HTMLs" off
-
-HTMLENCODINGFILES=	epydoc/docwriter/html_colorize.py \
-			epydoc/docwriter/html.py \
-			epydoc/docparser.py
-
 .include <bsd.port.pre.mk>
 
 .if defined(WITH_UTF8)
 HTMLENCODING?=	utf-8
 .endif
-.if defined(HTMLENCODING)
+
 post-patch:
-.for f in ${HTMLENCODINGFILES}
-	${REINPLACE_CMD} 's,iso-8859-1,${HTMLENCODING},g' ${WRKSRC}/${f}
-.endfor
+.if defined(HTMLENCODING)
+	@${GREP} -lR "iso-8859-1" ${WRKSRC}/epydoc | \
+		${XARGS} ${REINPLACE_CMD} -e 's|iso-8859-1|${HTMLENCODING}|g'
 .endif
 
 post-install:
 	cd ${WRKSRC}/man && ${INSTALL_MAN} ${MAN1} ${MAN1PREFIX}/man/man1
 .if !defined(NOPORTDOCS)
 	@${MKDIR} ${DOCSDIR}
-	${CP} -R ${WRKSRC}/doc/* ${DOCSDIR}
+	@(cd ${WRKSRC}/doc && ${COPYTREE_SHARE} . ${DOCSDIR})
 .endif
 
 .include <bsd.port.post.mk>
