--- a/astro/starplot/Makefile
+++ b/astro/starplot/Makefile
@@ -6,30 +6,24 @@
 #
 
 PORTNAME=	starplot
-PORTVERSION=	0.95.4
-PORTREVISION=	1
+PORTVERSION=	0.95.5
 CATEGORIES=	astro
 MASTER_SITES=	http://starplot.org/downloads/
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	3-dimensional viewer for star charts
 
-USE_GNOME=	gnometarget gtk20
-USE_ICONV=	yes
+USE_GNOME=	gnomehack gnometarget gtk20
+USE_GETTEXT=	yes
 USE_GMAKE=	yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ENV=	CPPFLAGS="-I${LOCALBASE}/include" \
 		LDFLAGS="-L${LOCALBASE}/lib"
-MAKE_ENV=	DOCSDIR="${DOCSDIR}" EXAMPLESDIR="${EXAMPLESDIR}"
 
 MAN1=		starconvert.1 starpkg.1 starplot.1
 
-.if defined(WITHOUT_NLS)
-CONFIGURE_ARGS+=	--disable-nls
-PLIST_SUB+=	NLS="@comment "
-.else
-USE_GETTEXT=	yes
-PLIST_SUB+=	NLS=""
-.endif
+post-patch:
+	@${REINPLACE_CMD} -e \
+		's|$$(docdir)/examples|${EXAMPLESDIR}|g' ${WRKSRC}/configure
 
 .include <bsd.port.mk>
